--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="text">Vlad are you pidor?</h1>
         <div class="variant">
             <button id="btn">No</button>
-            <a href="https://www.youtube.com/embed/6qDbnL7scr8?autoplay=1">Yes</a>
+            <a href="https://www.youtube.com/embed/6qDbnL7scr8?autoplay=1&controls=0">Yes</a>
         </div>
     </div>
 
